--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -14,7 +14,10 @@
     font-family: 'Roboto-normal';
     src: url('../fonts/Roboto-Regular.ttf');
 }
-
+::selection {
+    background: #8f9caa;
+    color: white;
+}
 body {
     width: 100vw;
     height: max-content;
@@ -23,60 +26,165 @@ body {
     font-family: 'Roboto-Normal';
 
     main {
+        .main__nav {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 5px 15px;
+            background: #E7F1FB;
+
+            .nav__logo {
+                display: flex;
+                justify-content: space-between;
+                width: 100px;
+                cursor: pointer;
+                transition: 0.5s all;
+                padding: 10px;
+                align-items: center;
+                border-radius: 10px;
+                user-select: none;
+                transition: 0.4s all;
+
+
+                &:hover {
+                    transform: scale(1.05);
+                    box-shadow: 0 1px 5px 0 rgb(0 0 0 / 10%);
+                }
+            }
+            .nav__group-links {
+                width: 740px;
+                display: flex;
+                justify-content: space-between;
+
+                .group-links__link {
+                    text-decoration: none;
+                    color: #455A74;
+                    text-transform: uppercase;
+                    width: 161px;
+                    height: 40px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+                    font-size: 12px;
+                    margin: 0 10px;
+                }
+                .group-links__link_active {
+                    background: rgba(10, 18, 30, 0.7);
+                    border-radius: 4px;
+                    color: white;
+                }
+            }
+        }
+
         .main__description-block {
             display: flex;
-            flex-direction: column;
-            padding: 10px;
+            padding: 20px;
             box-sizing: border-box;
             background: #E7F1FB;
 
-            .main__nav {
+            .description-block__social {
+                position: absolute;
                 display: flex;
+                flex-direction: column;
                 align-items: center;
-                justify-content: space-between;
-                padding: 5px 15px;
+                top: 110px;
+                .social__link {
+                    color: black;
+                    font-size: 1.4em;
+                    margin: 10px 0;
+                }
+            }
 
-                .nav__logo {
+            .title-block {
+                width: 586px;
+                margin: 40px 0 0 85px;
+                color: #0A121E;
+                font-family: 'Roboto-light';
+
+
+                .title__cap {
+                    text-transform: uppercase;
+                    margin-left: 15px;
+                    margin-bottom: 15px;
+                }
+
+                .title__subtitle {
+                    font-size: 72px;
+                    line-height: 76px;
+                }
+
+                .title__description {
+                    margin-top: 35px;
+                    width: 535px;
+                    line-height: 32px;
+                }
+                .title-block__actions {
+                    margin-top: 15px;
                     display: flex;
-                    justify-content: space-between;
-                    width: 100px;
-                    cursor: pointer;
-                    transition: 0.5s all;
-                    padding: 10px;
-                    align-items: center;
-                    border-radius: 10px;
-                    user-select: none;
-                    transition: 0.4s all;
+                    .actions__button {
+                        box-sizing: border-box;
+                        border-radius: 4px;
+                        cursor: pointer;
+                        padding: 15px;
+                        margin: 0 20px 0 0;
+                        outline: none;
+                        font-size: 12px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        font-family: 'Roboto-Light';
+                        letter-spacing: 0.6px;
+                        text-transform: uppercase;
+                        transition: 0.4s all;
+                        &:hover {
+                            transform: scale(1.05);
+                        }
+                        .fa-arrow-down {
+                            transform: rotate(-45deg);
+                            font-size: 16px;
+                        }
+                    }
 
+                    .actions__button_blue {
+                        background: #1673FF;
+                        border: 2px solid #1673FF;
+                        color: white;
+                        width: 295px;
+                        height: 58px;
+                    }
 
-                    &:hover {
-                        transform: scale(1.05);
-                        box-shadow: 0 1px 5px 0 rgb(0 0 0 / 10%);
+                    .actions__button_white {
+                        border: 2px solid rgba(10, 18, 30, 0.2);
+                        box-sizing: border-box;
+                        border-radius: 4px;
+                        background: transparent;
+                        width: 233px;
+                        height: 58px;
                     }
                 }
-                .nav__group-links {
-                    width: 740px;
-                    display: flex;
-                    justify-content: space-between;
+            }
 
-                    .group-links__link {
-                        text-decoration: none;
-                        color: black;
-                        text-transform: uppercase;
-                        width: 161px;
-                        height: 40px;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        text-align: center;
-                        font-size: 12px;
-                        margin: 0 10px;
-                    }
-                    .group-links__link_active {
-                        background: rgba(10, 18, 30, 0.7);
-                        border-radius: 4px;
-                        color: white;
-                    }
+            .description-block__account-preview {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                border: 1px solid #000;
+                width: 643px;
+                height: 643px;
+                margin-left: 350px;
+
+                .account-preview__circle-svg {
+                    position: relative;
+                    z-index: 0;
+                }
+
+                .account-preview__img {
+                    width: 405px;
+                    height: 643px;
+                    position: absolute;
+                    z-index: 1;
+                    top: 100px;
                 }
             }
         }
