--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,6 +2,16 @@
     margin: 0;
     padding: 0;
 }
+
+/* transition: 0.4s all;
+border-radius: 10px;
+
+&:hover {
+    transform: scale(1.05);
+    box-shadow: 0 1px 5px 0 rgb(0 0 0 / 10%);
+} */
+
+
 @font-face {
     font-family: 'Roboto-Bold';
     src: url('../fonts/Roboto-Black.ttf');
@@ -55,7 +65,7 @@ body {
                 display: flex;
                 justify-content: space-between;
 
-                .group-links__link {
+                .nav__link {
                     text-decoration: none;
                     color: #455A74;
                     text-transform: uppercase;
@@ -68,7 +78,7 @@ body {
                     font-size: 12px;
                     margin: 0 10px;
                 }
-                .group-links__link_active {
+                .nav__link_active {
                     background: rgba(10, 18, 30, 0.7);
                     border-radius: 4px;
                     color: white;
@@ -82,7 +92,7 @@ body {
             box-sizing: border-box;
             background: #E7F1FB;
 
-            .description-block__social {
+            .main__social {
                 position: absolute;
                 display: flex;
                 flex-direction: column;
@@ -113,7 +123,7 @@ body {
                     line-height: 76px;
                 }
 
-                .title__description {
+                .title__text {
                     margin-top: 35px;
                     width: 535px;
                     line-height: 32px;
@@ -164,7 +174,7 @@ body {
                 }
             }
 
-            .description-block__account-preview {
+            .main__account-preview {
                 display: flex;
                 align-items: center;
                 flex-direction: column;
@@ -172,12 +182,12 @@ body {
                 height: 643px;
                 margin-left: 350px;
 
-                .account-preview__circle-svg {
+                .main__circle-svg {
                     position: relative;
                     z-index: 0;
                 }
 
-                .account-preview__img {
+                .main__img {
                     width: 405px;
                     cursor: pointer;
                     position: absolute;
@@ -216,7 +226,7 @@ body {
                     line-height: 76px;
                 }
 
-                .title__description {
+                .title__text {
                     margin-top: 35px;
                     width: 535px;
                     line-height: 32px;
@@ -226,6 +236,66 @@ body {
             .main__svg-statistics {
                 margin-right: 150px;
             }
-        }   
+        }
+
+        .main__what-blank-does {
+            margin-top: 100px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+
+            .main__title {
+                font-size: 12px;
+                text-align: center;
+                letter-spacing: 1.2px;
+                text-transform: uppercase;
+                color: #0A121E;
+                font-family: 'Roboto-Light';
+            }
+
+            .main__subtitle {
+                font-size: 55px;
+                color: #0A121E;
+                margin-top: 15px;
+            }
+
+            .main__recommendations {
+                display: flex;
+                justify-content: space-between;
+                width: 1350px;
+                margin-top: 50px;
+
+                .main__recommendation {
+                    background: #E7F1FB;
+                    width: 392px;
+                    height: 440px;
+                    margin: 0 10px;
+                    border-radius: 10px;
+                    cursor: pointer;
+                    transition: 0.4s all;
+                    padding: 30px;
+                    box-sizing: border-box;
+                    text-align: center;
+
+                    &:hover {
+                        transform: scale(1.05);
+                    }
+
+                    .recommendation__svg {
+                        margin-top: 30px;
+                    }
+
+                    .recommendation__title {
+                        font-family: 'Roboto-Light';
+                        margin: 30px 0;
+                    }
+                    .recommendation__text {
+                        line-height: 28px;
+                        color: #455A74
+                    }
+                }
+            }
+        }
     }
 }
