--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -103,6 +103,23 @@ body {
                     height: 58px;
                 }
             }
+
+            .title-block__ul {
+                margin: 30px 0 0;
+
+                & > li {
+                    margin: 15px 15px 15px 0;
+                    list-style: none;
+
+                    &::before {
+                        content: "✔";
+                        margin-right: 10px;
+                        width: 5px;
+                        height: 5px;
+                        color: #1673FF;
+                    }
+                }
+            }
         }
         .main__nav {
             display: flex;
@@ -186,7 +203,7 @@ body {
                     z-index: 0;
                 }
 
-                .main__img {
+                .description-block__img {
                     width: 405px;
                     cursor: pointer;
                     position: absolute;
@@ -276,6 +293,26 @@ body {
             justify-content: space-between;
             align-items: center;
             padding: 10px 225px;
+        }
+        .main__privacy-by-design {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 125px;
+
+            .privacy-by-design__img {
+                width: 307px;
+                height: 509px;
+                cursor: pointer;
+                transition: 0.4s all;
+                border-radius: 10px;
+
+                &:hover {
+                    transform: scale(1.05);
+                    box-shadow: 0 1px 5px 0 rgb(0 0 0 / 10%);
+                }
+
+            }
         }
     }
 }
