--- a/app/css/main.css
+++ b/app/css/main.css
@@ -97,11 +97,10 @@ body main .title-block .title-block__actions .actions__button_white {
   height: 58px;
 }
 body main .title-block .title-block__ul {
-  margin: 30px 0 0 0;
+  margin: 30px 0 0;
 }
 body main .title-block .title-block__ul > li {
-  margin: 15px;
-  margin-left: 0;
+  margin: 15px 15px 15px 0;
   list-style: none;
 }
 body main .title-block .title-block__ul > li::before {
@@ -187,7 +186,7 @@ body main .main__description-block .main__account-preview .main__circle-svg {
   position: relative;
   z-index: 0;
 }
-body main .main__description-block .main__account-preview .main__img {
+body main .main__description-block .main__account-preview .description-block__img {
   width: 405px;
   cursor: pointer;
   position: absolute;
@@ -196,7 +195,7 @@ body main .main__description-block .main__account-preview .main__img {
   transition: 0.4s all;
   border-radius: 10px;
 }
-body main .main__description-block .main__account-preview .main__img:hover {
+body main .main__description-block .main__account-preview .description-block__img:hover {
   transform: scale(1.05);
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
 }
@@ -266,6 +265,27 @@ body main .main__what-extension-gives {
   justify-content: space-between;
   align-items: center;
   padding: 10px 225px;
+}
+body main .main__privacy-by-design, body main .main__block-about-secure {
+  margin: 50px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body main .main__privacy-by-design .privacy-by-design__img, body main .main__block-about-secure .privacy-by-design__img {
+  margin: 0 100px;
+  width: 307px;
+  height: 509px;
+  cursor: pointer;
+  transition: 0.4s all;
+  border-radius: 10px;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
+}
+body main .main__privacy-by-design .privacy-by-design__img:hover, body main .main__block-about-secure .privacy-by-design__img:hover {
+  transform: scale(1.05);
+}
+body main .main__block-about-secure {
+  flex-direction: row-reverse;
 }
 
 /*# sourceMappingURL=main.css.map*/
